--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div> -->
 
     <div id="profile-hero" class="container-center">
-        <div class="card hero-card shadow-sm p-3">
+        <div class="card hero-card shadow-sm p-3" style="width: 70vw;">
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-4 py-3">
@@ -113,7 +113,7 @@
     </div>
 
     <div id="education" class="container-center">
-        <div class="card hero-card shadow-sm p-3">
+        <div class="card hero-card shadow-sm p-3" style="width: 70vw;">
             <div class="card-body">
                 <h2>Education</h2>
                 <div class="timeline green">
@@ -155,7 +155,7 @@
     </div>
 
     <div id="experience" class="container-center">
-        <div class="card hero-card shadow-sm p-3">
+        <div class="card hero-card shadow-sm p-3" style="width: 70vw;">
             <div class="card-body">
                 <h2>Experience</h2>
                 <div class="timeline blue">
@@ -199,18 +199,50 @@
     </div>
 
 
-    <div id="skills" class="container-center">
-        <div class="card hero-card p-3 shadow-sm">
-            <div class="card-body">
-                <h2>Skills</h2>
-                <div class="slider p20">
-                    <div class="slider-fill"></div>
-                    <div class="slider-thumb"></div>
+    <div id="languages" class="container-center">
+        <div class="row" style="width: 70vw;">
+            <div class="col-md-6 languages-section">
+                <div class="card hero-card p-3 shadow-sm">
+                    <div class="card-body">
+                        <h2>Languages</h2>
+                        <b>Dutch</b>
+                        <div class="slider p100">
+                            <div class="slider-fill"></div>
+                            <div class="slider-thumb"></div>
+                        </div>
+
+                        <b>English</b>
+                        <div class="slider p90 red">
+                            <div class="slider-fill"></div>
+                            <div class="slider-thumb"></div>
+                        </div>
+
+                        <b>French</b>
+                        <div class="slider p50 green">
+                            <div class="slider-fill"></div>
+                            <div class="slider-thumb"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 hobbies-section">
+                <div class="card hero-card p-3 shadow-sm">
+                    <div class="card-body">
+                        <h2>Hobbies</h2>
+                        <p>
+                            In my free time, I enjoy various activities that help me relax and recharge. Here are some of
+                            my hobbies:
+                        </p>
+                        <ul class="list-unstyled">
+                            <li>💻 Programming</li>
+                            <li>🏸 Badminton</li>
+                            <li>🎮 Gaming</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
