--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col-md-4 py-3">
                         <div class="text-center">
-                            <img src="/assets/profile.jpg" class="profile-img img-fluid rounded-circle mb-3"
+                            <img src="assets/profile.jpg" class="profile-img img-fluid rounded-circle mb-3"
                                 alt="Profile Picture">
                         </div>
                         <div class="d-flex justify-content-center">
