--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="d-flex justify-content-center">
                             <div class="hstack gap-3 contact-icons">
-                                <a href="mailto:benboydens@hotmail.be" class="text-black text-decoration-none"
+                                <a href="#" class="text-black text-decoration-none email-link"
                                     target="_blank">
                                     <i class="bi bi-envelope-fill"></i>
                                 </a>
@@ -99,7 +99,11 @@
                             <div class="value">25</div>
 
                             <div class="key">Email</div>
-                            <div class="value">benboydens@hotmail.be</div>
+                            <div class="value">
+                                <a href="#" class="email-link">
+                                    <img src="assets/adress.png" alt="email" style="height: 1.5rem;">
+                                </a>
+                            </div>
 
                             <div class="key">Location</div>
                             <div class="value">De Haan, Belgium</div>
@@ -248,6 +252,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
