--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/timeline.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
+    <link href="css/skills.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -67,8 +68,7 @@
                         </div>
                         <div class="d-flex justify-content-center">
                             <div class="hstack gap-3 contact-icons">
-                                <a href="#" class="text-black text-decoration-none email-link"
-                                    target="_blank">
+                                <a href="#" class="text-black text-decoration-none email-link" target="_blank">
                                     <i class="bi bi-envelope-fill"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/ben-boydens-99b139208/"
@@ -203,7 +203,81 @@
     </div>
 
 
-    <div id="languages" class="container-center">
+    <div id="skills" class="container-center">
+        <div class="card hero-card p-3 shadow-sm" style="width: 70vw;">
+            <div class="card-body">
+                <h2>Skills</h2>
+                <div class="row gy-4">
+                    <div class="col-md-6 skills-category">
+                        <div class="section-title">Frontend</div>
+                        <div>
+                            <span class="skill-badge">HTML</span>
+                            <span class="skill-badge">CSS</span>
+                            <span class="skill-badge">JavaScript</span>
+                            <span class="skill-badge">Bootstrap</span>
+                            <span class="skill-badge">React</span>
+                            <span class="skill-badge">Vue</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 skills-category">
+                        <div class="section-title">Backend</div>
+                        <div>
+                            <span class="skill-badge">PHP</span>
+                            <span class="skill-badge">Symfony</span>
+                            <span class="skill-badge">NodeJS</span>
+                            <span class="skill-badge">Express</span>
+                            <span class="skill-badge">Spring Boot</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 skills-category">
+                        <div class="section-title" style="border-color: red;">Languages</div>
+                        <div>
+                            <span class="skill-badge">PHP</span>
+                            <span class="skill-badge">Java</span>
+                            <span class="skill-badge">Python</span>
+                            <span class="skill-badge">Javascript</span>
+                            <span class="skill-badge">C/C++</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 skills-category">
+                        <div class="section-title" style="border-color: red;">Databases</div>
+                        <div>
+                            <span class="skill-badge">SQL</span>
+                            <span class="skill-badge">MongoDB</span>
+                            <span class="skill-badge">MySQL</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 skills-category">
+                        <div class="section-title" style="border-color: MediumSeaGreen;">Devops</div>
+                        <div>
+                            <span class="skill-badge">Docker</span>
+                            <span class="skill-badge">Docker compose</span>
+                            <span class="skill-badge">git</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 skills-category">
+                        <div class="section-title" style="border-color: MediumSeaGreen;">Networking</div>
+                        <div>
+                            <span class="skill-badge">Configure routers/switches</span>
+                            <span class="skill-badge">Cisco CCNA</span>
+                            <span class="skill-badge">OSI model</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 skills-category">
+                        <div class="section-title" style="border-color: orange;">Other</div>
+                        <div>
+                            <span class="skill-badge">Microsoft AD</span>
+                            <span class="skill-badge">Azure AD</span>
+                            <span class="skill-badge">Swagger REST API design</span>
+                            <span class="skill-badge">Android</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="other" class="container-center">
         <div class="row" style="width: 70vw;">
             <div class="col-md-6 languages-section">
                 <div class="card hero-card p-3 shadow-sm">
@@ -234,7 +308,8 @@
                     <div class="card-body">
                         <h2>Hobbies</h2>
                         <p>
-                            In my free time, I enjoy various activities that help me relax and recharge. Here are some of
+                            In my free time, I enjoy various activities that help me relax and recharge. Here are some
+                            of
                             my hobbies:
                         </p>
                         <ul class="list-unstyled">
