--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,10 @@
     <meta charset="UTF-8">
     <title>Ben Boydens - Curriculum Vitae</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/timeline.css" rel="stylesheet">
-    <link href="css/slider.css" rel="stylesheet">
-    <link href="css/skills.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-    <div id="backdrop"></div>
+    <div id="backdrop" style="background: url('img/mountains.jpg') no-repeat center center/cover;"></div>
 
     <!-- <div class="container-center">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -63,7 +56,7 @@
                 <div class="row">
                     <div class="col-md-4 py-3">
                         <div class="text-center">
-                            <img src="assets/profile.jpg" class="profile-img img-fluid rounded-circle mb-3"
+                            <img src="img/profile.jpg" class="profile-img img-fluid rounded-circle mb-3"
                                 alt="Profile Picture">
                         </div>
                         <div class="d-flex justify-content-center">
@@ -101,7 +94,7 @@
                             <div class="key">Email</div>
                             <div class="value">
                                 <a href="#" class="email-link">
-                                    <img src="assets/adress.png" alt="email" style="height: 1.5rem;">
+                                    <img src="img/adress.png" alt="email" style="height: 1.5rem;">
                                 </a>
                             </div>
 
@@ -322,12 +315,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
 </body>
 
 </html>
