fixed container styling + other css fixes

--- a/src/index.html
+++ b/src/index.html
@@ -51,16 +51,16 @@
         </nav>
     </div> -->
 
-    <div id="profile-hero" class="container-center">
-        <div class="card hero-card shadow-sm p-3" style="width: 70vw;">
+    <div class="container">
+        <div id="profile-hero" class="card hero-card shadow-sm p-3">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-md-4 py-3">
+                    <div class="col-md-4 pb-3">
                         <div class="text-center">
                             <img src="img/profile.jpg" class="profile-img img-fluid rounded-circle mb-3"
                                 alt="Profile Picture">
                         </div>
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center icon-wrapper">
                             <div class="hstack gap-3 contact-icons">
                                 <a href="#" class="text-black text-decoration-none email-link" target="_blank">
                                     <i class="bi bi-envelope-fill"></i>
@@ -108,10 +108,8 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="education" class="container-center">
-        <div class="card hero-card shadow-sm p-3" style="width: 70vw;">
+        <div id="education" class="card hero-card shadow-sm p-3">
             <div class="card-body">
                 <h2>Education</h2>
                 <div class="timeline green">
@@ -150,10 +148,8 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="experience" class="container-center">
-        <div class="card hero-card shadow-sm p-3" style="width: 70vw;">
+        <div id="experience" class="card hero-card shadow-sm p-3">
             <div class="card-body">
                 <h2>Experience</h2>
                 <div class="timeline blue">
@@ -194,11 +190,8 @@
                 </div>
             </div>
         </div>
-    </div>
 
-
-    <div id="skills" class="container-center">
-        <div class="card hero-card p-3 shadow-sm" style="width: 70vw;">
+        <div id="skills" class="card hero-card p-3 shadow-sm">
             <div class="card-body">
                 <h2>Skills</h2>
                 <div class="row gy-4">
@@ -269,48 +262,49 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="other" class="container-center">
-        <div class="row" style="width: 70vw;">
-            <div class="col-md-6 languages-section">
-                <div class="card hero-card p-3 shadow-sm">
-                    <div class="card-body">
-                        <h2>Languages</h2>
-                        <b>Dutch</b>
-                        <div class="slider p100">
-                            <div class="slider-fill"></div>
-                            <div class="slider-thumb"></div>
-                        </div>
+        <div id="other">
+            <div class="row g-4">
+                <div class="col-md-6 languages-section">
+                    <div class="card hero-card p-3 shadow-sm">
+                        <div class="card-body">
+                            <h2>Languages</h2>
+                            <b>Dutch</b>
+                            <div class="slider p100">
+                                <div class="slider-fill"></div>
+                                <div class="slider-thumb"></div>
+                            </div>
 
-                        <b>English</b>
-                        <div class="slider p90 red">
-                            <div class="slider-fill"></div>
-                            <div class="slider-thumb"></div>
-                        </div>
+                            <b>English</b>
+                            <div class="slider p90 red">
+                                <div class="slider-fill"></div>
+                                <div class="slider-thumb"></div>
+                            </div>
 
-                        <b>French</b>
-                        <div class="slider p50 green">
-                            <div class="slider-fill"></div>
-                            <div class="slider-thumb"></div>
+                            <b>French</b>
+                            <div class="slider p50 green">
+                                <div class="slider-fill"></div>
+                                <div class="slider-thumb"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 hobbies-section">
-                <div class="card hero-card p-3 shadow-sm">
-                    <div class="card-body">
-                        <h2>Hobbies</h2>
-                        <p>
-                            In my free time, I enjoy various activities that help me relax and recharge. Here are some
-                            of
-                            my hobbies:
-                        </p>
-                        <ul class="list-unstyled">
-                            <li>💻 Programming</li>
-                            <li>🏸 Badminton</li>
-                            <li>🎮 Gaming</li>
-                        </ul>
+                <div class="col-md-6 hobbies-section">
+                    <div class="card hero-card p-3 shadow-sm">
+                        <div class="card-body">
+                            <h2>Hobbies</h2>
+                            <p>
+                                In my free time, I enjoy various activities that help me relax and recharge. Here are
+                                some
+                                of
+                                my hobbies:
+                            </p>
+                            <ul class="list-unstyled">
+                                <li>💻 Programming</li>
+                                <li>🏸 Badminton</li>
+                                <li>🎮 Gaming</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
